[package]
name = "rusty-compression"
version = "0.1.0"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "Low rank compression algorithms in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-compression"
repository = "https://github.com/rusty-fast-solvers/rusty-compression"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_compression"
crate-type = ["lib", "cdylib"]

[dependencies]
rusty-kernel-tools = "0.1"
num = "0.3"
ndarray = { version = "0.14", features = ["rayon"] }
ndarray-linalg = { version = "0.13", features = ["netlib-system"] }
rand = "0.8"
itertools = "0.10"
rayon = "1.5"
rand_distr = "0.4"
lapack = "0.18"
lax = "0.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[features]
openblas = []
