[package]
name = "rusty-compression"
version = "0.0.1"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Srinath Kailasa"]
edition = "2018"
description = "Low rank compression algorithms in Rust."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-compression"
repository = "https://github.com/rusty-fast-solvers/rusty-compression"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_compression"
crate-type = ["lib", "cdylib"]

[dependencies]
num = "0.*"
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
rand = "0.8"
itertools = "0.10"
rand_distr = "0.4"
lapack = "0.*"
lax = "0.*"
plotters = "0.*"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
openblas = []
